@@ -5,10 +5,6 @@
 #include <iterator>
 #include <limits>
 
-#include <bobcat/x2a>
-#include <bobcat/a2x>
-
 using namespace std;
-using namespace FBB;
 
 
