@@ -1,4 +1,4 @@
-// Generated by Flexc++ V1.06.00 on Sun, 23 Jun 2013 12:27:41 +0200
+// Generated by Flexc++ V1.06.00 on Sun, 23 Jun 2013 17:38:25 +0200
 
 #include <iostream>
 #include <fstream>
@@ -2836,7 +2836,7 @@ try
         {
 #line 192 "lexer"
             {
-    d_number = A2x(d_matched);
+    d_number = stoul(d_matched);
     return Parser::NUMBER;
 }
 
